PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.4

- Core:
  . Fixed bug #71474 (Crash because of VM stack corruption on Magento2).
    (Dmitry)
  . Fixed bug #71450 (An integer overflow bug in php_str_to_str_ex()). (Stas)
  . Fixed bug #71449 (An integer overflow bug in php_implode()). (Stas)
  . Fixed bug #71443 (Segfault using built-in webserver with intl using
    symfony). (Laruence)
  . Fixed bug #71442 (forward_static_call crash). (Laruence)
  . Fixed bug #71441 (Typehinted Generator with return in try/finally crashes).
    (Bob)

- Fileinfo:
  . Fixed bug #71434 (finfo throws notice for specific python file). (Laruence)

- FPM:
  . Fixed bug #62172 (FPM not working with Apache httpd 2.4 balancer/fcgi setup).
    (Matt Haught, Remi)

- Standard:
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)

04 Feb 2016 PHP 7.0.3

- Core:
  . Fixed bug #71336 (Wrong is_ref on properties as exposed via
    get_object_vars()). (Laruence)
  . Fixed bug #71248 (Wrong interface is enforced). (Dmitry)
  . Fixed bug #71300 (Segfault in zend_fetch_string_offset). (Laruence)
  . Fixed bug #71221 (Null pointer deref (segfault) in get_defined_vars via
    ob_start). (hugh at allthethings dot co dot nz)
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Added support for new HTTP 451 code. (Julien)
  . Fixed Bug #71275 (Bad method called on cloning an object having a trait).
    (Bob)
  . Fixed bug #71273 (A wrong ext directory setup in php.ini leads to crash).
    (Anatol)
  . Fixed bug #71297 (Memory leak with consecutive yield from). (Bob)
  . Fixed bug #71314 (var_export(INF) prints INF.0). (Andrea)

- Apache2handler:
  . Fix >2G Content-Length headers in apache2handler. (Adam Harvey)

- CURL:
  . Fixed bug #71227 (Can't compile php_curl statically). (Anatol)